--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hello, World!</title>
+    <title>Rock-Paper-Scissors</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
